--- a/style/mdc-dialog.css
+++ b/style/mdc-dialog.css
@@ -59,7 +59,7 @@
   padding: 0; }
 
 .mdc-dialog__header__title {
-  font-family: Roboto, sans-serif;
+  font-family: Consolas, Menlo, Monaco, 'Ubuntu Mono', monospace;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-size: 1.25rem;
@@ -75,7 +75,7 @@
   color: rgba(0, 0, 0, 0.54);
   /* @alternate */
   color: var(--mdc-theme-text-secondary-on-light, rgba(0, 0, 0, 0.54));
-  font-family: Roboto, sans-serif;
+  font-family: Consolas, Menlo, Monaco, 'Ubuntu Mono', monospace;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-size: 1rem;
