--- a/style/app.css
+++ b/style/app.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 body, input, button, select, option, textarea {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Ubuntu, Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-family: Consolas, Menlo, Monaco, 'Ubuntu Mono', monospace;
     font-size: 14px;
     line-height: 1.5;
 }
