--- a/style/mdc-dialog.css
+++ b/style/mdc-dialog.css
@@ -1,5 +1,7 @@
 /*!
  Material Components for the Web
+ Thanks, Google! (It's their work, copyrighted in 2018)
+ Terkwood has modified this file to suit our needs
  License: MIT
 */
 .mdc-dialog {
@@ -15,9 +17,7 @@
   z-index: 11; }
 
 .mdc-dialog__backdrop {
-  background-color: rgba(0, 0, 0, 0.87);
-  /* @alternate */
-  background-color: var(--mdc-theme-text-primary-on-light, rgba(0, 0, 0, 0.87));
+  background-color: rgba(1,1,1,0.5);
   position: fixed;
   top: 0;
   left: 0;
@@ -25,8 +25,9 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  z-index: -1; }
+  z-index: 20; 
+  visibility: visible;
+}
 
 .mdc-dialog__surface {
   box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
@@ -42,6 +43,7 @@
           transform: translateY(150px) scale(0.8);
   border-radius: 2px;
   visibility: visible;
+  z-index: 30;
  }
   .mdc-dialog[dir="rtl"] .mdc-dialog__surface,
   [dir="rtl"] .mdc-dialog .mdc-dialog__surface {
