--- a/style/mdc-dialog.css
+++ b/style/mdc-dialog.css
@@ -64,8 +64,8 @@
   font-family: Consolas, Menlo, Monaco, 'Ubuntu Mono', monospace;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-size: 2.5rem;
-  line-height: 2rem;
+  font-size: 32px;
+  line-height: 1.66;
   font-weight: 500;
   letter-spacing: 0.025em;
   text-decoration: inherit;
