--- a/style/mdc-dialog.css
+++ b/style/mdc-dialog.css
@@ -71,8 +71,7 @@
   text-decoration: inherit;
   text-transform: inherit;
   flex: 1;
-  padding: 48px 0;
-}
+  margin: 0; }
 
 .mdc-dialog__body {
   color: rgba(0, 0, 0, 0.54);
