--- a/style/mdc-dialog.css
+++ b/style/mdc-dialog.css
@@ -81,7 +81,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-size: 24px;
-  line-height: 1.66;
+  line-height: 48px;
   font-weight: 400;
   letter-spacing: 0.0623em;
   text-decoration: inherit;
