--- a/style/mdc-dialog.css
+++ b/style/mdc-dialog.css
@@ -64,10 +64,10 @@
   font-family: Consolas, Menlo, Monaco, 'Ubuntu Mono', monospace;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-size: 1.25rem;
-  line-height: 2rem;
+  font-size: 32px;
+  line-height: 1.5;
   font-weight: 500;
-  letter-spacing: 0.0125em;
+  letter-spacing: 0.03125em;
   text-decoration: inherit;
   text-transform: inherit;
   flex: 1;
@@ -80,10 +80,11 @@
   font-family: Consolas, Menlo, Monaco, 'Ubuntu Mono', monospace;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: 24px;
+  line-height: 1.5;
   font-weight: 400;
-  letter-spacing: 0.03125em;
+  /* 24 * 0.0416 ≈ 1px */
+  letter-spacing: 0.0416667em;
   text-decoration: inherit;
   text-transform: inherit;
   margin-top: 86px;
@@ -136,7 +137,7 @@
   .mdc-dialog__surface {
     min-width: 280px; }
   .mdc-dialog__body {
-    line-height: 24px; } }
+    line-height: 1.5; } }
 
 .mdc-dialog--animating {
   visibility: visible; }
