--- a/style/mdc-dialog.css
+++ b/style/mdc-dialog.css
@@ -30,7 +30,7 @@
 }
 
 .mdc-dialog__surface {
-  box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 33px 45px -21px rgba(0, 0, 0, 0.2), 0px 72px 114px 9px rgba(0, 0, 0, 0.14), 0px 27px 138px 24px rgba(0, 0, 0, 0.12);
   background-color: #fff;
   /* @alternate */
   background-color: var(--mdc-theme-background, #fff);
@@ -39,8 +39,8 @@
   width: calc(100% - 30px);
   min-width: 640px;
   max-width: 865px;
-  -webkit-transform: translateY(150px) scale(0.8);
-          transform: translateY(0px) scale(0.8);
+  -webkit-transform: translateY(150px) scale(1.0);
+          transform: translateY(0px) scale(1.0);
   border-radius: 2px;
   visibility: visible;
   z-index: 30;
@@ -103,16 +103,17 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-end;
-  padding: 8px; }
+  padding: 24px; }
 
 .mdc-dialog__footer__button {
+  transform: translateX(-38%) scale(2); 
   /* @noflip */
   margin-left: 0;
   /* @noflip */
-  margin-right: 8px; }
+  margin-right: 24px; }
   [dir="rtl"] .mdc-dialog__footer__button, .mdc-dialog__footer__button[dir="rtl"] {
     /* @noflip */
-    margin-left: 8px;
+    margin-left: 24px;
     /* @noflip */
     margin-right: 0; }
   .mdc-dialog__footer__button:last-child {
