--- a/style/index.css
+++ b/style/index.css
@@ -24,7 +24,7 @@ header, #bar .bar {
     left: 0;
     right: 0;
     top: 0;
-    height: 40px;
+    height: 80px;
     overflow: hidden;
     transition: transform .2s;
 }
@@ -34,27 +34,27 @@ header {
     }
     header .hotspot {
         position: relative;
-        width: 12px;
-        height: 20px;
+        width: 24px;
+        height: 40px;
         flex: none;
-        margin: 0 10px;
+        margin: 0 20px;
         background: #a456bb;
-        transform: translateY(-42px);
+        transform: translateY(-84px);
         transition: transform .2s;
     }
     header .hotspot::before, header .hotspot::after {
         content: '';
         display: block;
         position: absolute;
-        bottom: -6px;
+        bottom: -12px;
         left: 0;
-        border-top: 6px solid #a456bb;
-        border-right: 6px solid transparent;
+        border-top: 12px solid #a456bb;
+        border-right: 12px solid transparent;
     }
     header .hotspot::after {
-        left: 6px;
+        left: 12px;
         border-right: none;
-        border-left: 6px solid transparent;
+        border-left: 12px solid transparent;
     }
     header.hotspot .hotspot {
         transform: none;
@@ -66,13 +66,13 @@ header {
         flex: none;
         justify-content: flex-end;
         flex: 1 0;
-        padding: 0 10px;
+        padding: 0 20px;
     }
     header .playercontent.player_-1 {
         justify-content: flex-start;
     }
     header .playercontent > * + * {
-        margin-left: 5px;
+        margin-left: 10px;
     }
     header .name {
         overflow: hidden;
@@ -89,15 +89,15 @@ header {
     header .captures {
         flex: none;
         display: inline-block;
-        height: 20px;
-        min-width: 10px;
-        border-radius: 10px;
-        padding: 0 5px;
+        height: 40px;
+        min-width: 20px;
+        border-radius: 20px;
+        padding: 0 10px;
         background: black;
-        line-height: 20px;
+        line-height: 40px;
         text-align: center;
         opacity: .7;
-        font-size: .8em;
+        font-size: 1.6em;
         transition: opacity .2s;
     }
     header .current-player, header .menu {
@@ -105,13 +105,13 @@ header {
         align-items: center;
         flex: none;
         justify-content: center;
-        padding: 5px;
+        padding: 10px;
     }
     header .current-player {
         cursor: pointer;
     }
     header .menu {
-        width: 32px;
+        width: 64px;
     }
     header .menu:hover, header .menu:focus {
         background: #222;
@@ -125,26 +125,26 @@ header {
         left: 0;
         right: 0;
         bottom: 0;
-        height: 40px;
+        height: 80px;
         overflow: hidden;
         text-align: center;
         background: #26292C;
         color: #eee;
-        line-height: 40px;
+        line-height: 80px;
         transition: background .2s;
     }
-    #bar .bar { transform: translateY(-40px); }
+    #bar .bar { transform: translateY(-80px); }
     #bar .bar.current { transform: none; }
-    #bar header:not(.current) { transform: translateY(40px); }
+    #bar header:not(.current) { transform: translateY(80px); }
     #bar .bar.hidecontent > * { display: none; }
     #bar .bar .close {
         display: block;
         position: absolute;
-        right: 4px;
+        right: 8px;
         top: 0;
-        height: 40px;
-        width: 35px;
-        background: url('../node_modules/octicons/build/svg/x.svg') center / auto 21px no-repeat;
+        height: 80px;
+        width: 70px;
+        background: url('../node_modules/octicons/build/svg/x.svg') center / auto 42px no-repeat;
         opacity: .5;
     }
     #bar .bar .close:active { opacity: .7; }
@@ -158,21 +158,21 @@ header {
     .guess #bar { background: #823499; }
     #bar .bar input {
         box-sizing: border-box;
-        height: 32px;
+        height: 64px;
     }
     #bar .bar button:active {
         transform: translateY(-46%);
     }
     #scoring .result, #estimator .result {
         position: absolute;
-        left: 10px;
+        left: 20px;
         top: 0;
         height: 100%;
     }
     #scoring .result button, #estimator .result button {
         box-sizing: border-box;
-        height: 32px;
-        margin-right: .7rem;
+        height: 64px;
+        margin-right: 1.4rem;
         background: #600000;
         transform: none;
     }
